--- a/template/base.html
+++ b/template/base.html
@@ -24,7 +24,7 @@
     </main>
 
     <footer class="text-center p-3 bg-dark text-white">
-        <p>© 2025 Vehicle Parking App</p>
+        <p>© Vehicle Parking App</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
