My second and Final commit. Added some more core functionalities.

--- a/template/admin_dashboard.html
+++ b/template/admin_dashboard.html
@@ -6,6 +6,7 @@
 <a href="/admin/lot/create" class="btn btn-primary my-2">Add Parking Lot</a>
 <a href="/admin/users" class="btn btn-info my-2">View Users</a>
 <a href="/admin/charts" class="btn btn-warning my-2">View Stats</a>
+<a href="/admin/search" class="btn btn-secondary my-2">Search Spots</a>
 
 <h4 class="mt-4">All Parking Lots:</h4>
 <table class="table table-bordered">
