--- a/template/base.html
+++ b/template/base.html
@@ -12,7 +12,9 @@
             <a class="navbar-brand" href="/">Vehicle Parking</a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+                    {% if 'user_id' in session or 'admin_id' in session %}
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
